sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: ';' expected but '[' found.
        Pour tout i dans [0,lgr-2]
                         ^AlgBubbleSort1:4: error: ';' expected but ',' found.
          Si les cases i et i+1 doivent être inversées, le faire
                                                      ^