sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
        Pour tout i dans [0,lgr-2]
          Si les cases i et i+1 doivent être inversées, le faire
     tant qu'on a inverser des choses lors du dernier parcours
for( i<- 0 to lgr-2 )
{
	if(getValeur(i) > getValeur(i+1))
	{
		echange(i,i+1)
	}
}
}
